--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -4,14 +4,17 @@ one:
   description: MyText
   image_url: adrpo.jpg
   price: 9.99
+
 two:
   title: MyString
   description: MyText
-  image_url: dcbang.jpg
+  image_url: rails.png
   price: 9.99
 
 ruby:
   title: Programming Ruby 1.9
-  description: Ruby is the fastest growing and most exciting dynamic language out there. If you need to get working programs delivered fast, you should add Ruby to your toolbox.
+  description:
+    Ruby is the fastest growing and most exciting dynamic language out there.
+    If you need to get working programs delivered fast, you should add Ruby to your toolbox.
   image_url: rails.png
   price: 49.50
